# NH

./: .gitignore  README.md  index.html
camera_control/: auto_shutter.py  flir_control.py
camera_control/flir_spinnaker_config/: blackfly_s.yaml  driver_node.launch.py
light_control/: light_meter.py
light_control/teensy_meter_driver/: teensy_meter_driver.ino
nighthawk_ros/: README.md  package.xml  setup.cfg  setup.py
nighthawk_ros/config/: params.yml
nighthawk_ros/launch/: nighthawk_ros_launch.py
nighthawk_ros/nighthawk_ros/: image_writer.py  light_control_ros.py  nighthawk_ros.py  nighthawk_score_node.py  score.py
nighthawk_ros/utils/: NightHawk.json  exposure-scaler.ts  state-process.ts
