<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>nighthawk_ros</name>
  <version>0.0.0</version>
  <description>ROS Wrapper for NightHawk</description>

  <maintainer email="yashturk@buffalo.edu">yashturkar</maintainer>
  <author email="yashturk@buffalo.edu">yashturkar</author>

  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
